fixed spacing logic error

--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -105,8 +105,12 @@ h5 {
 
 .featured-section {
 	text-align: center;
-	margin: 3zem 0em 2em 0em !important;
+	margin: 6em 0em 2em 0em !important;
 	padding: 0% 10% 0% 10%;
+}
+
+.leading-section{
+	margin-top: 4em !important;
 }
 
 #last-homepage-section {
